Add Database for Debt

--- a/public/css/pay-dashboard.css
+++ b/public/css/pay-dashboard.css
@@ -4513,6 +4513,7 @@ License - nucleoapp.com/license/
 .table>tfoot>tr>td {
   padding: 12px 7px;
   vertical-align: middle;
+  font-size: 14px;
 }
 
 .table .th-description {
