--- a/public/css/pay-dashboard.css
+++ b/public/css/pay-dashboard.css
@@ -5112,22 +5112,41 @@ License - nucleoapp.com/license/
   transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
 }
 
-.main-panel>.content {
+ .main-login-panel {
+  position: relative;
+  float: right;
+  width: 100%;
+  background-color: #f4f3ef;
+  -webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
+  -moz-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
+  -o-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
+  -ms-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
+  transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
+ }
+
+.main-panel>.content, {
   padding: 0 30px 30px;
   min-height: calc(100vh - 170px);
   margin-top: 93px;
+}
+
+.main-login-panel>.content {
+  padding: 0 30px 30px;
+  min-height: 100%;
+  margin-top: 93px; 
 }
 
 .main-panel>.navbar {
   margin-bottom: 0;
 }
 
-.main-panel .header {
+.main-panel .header, .main-login-panel .header {
   margin-bottom: 50px;
 }
 
 .perfect-scrollbar-on .sidebar,
-.perfect-scrollbar-on .main-panel {
+.perfect-scrollbar-on .main-panel,
+.perfect-scrollbar-on .main-login-panel {
   height: 100%;
   max-height: 100%;
 }
@@ -6334,7 +6353,7 @@ License - nucleoapp.com/license/
     -ms-transform: translate3d(-260px, 0, 0);
     transform: translate3d(-260px, 0, 0);
   }
-  .main-panel {
+  .main-panel, .main-login-panel {
     width: 100%;
   }
   .timeline:before {
@@ -6437,7 +6456,7 @@ License - nucleoapp.com/license/
   .card-stats [class*="col-"] .statistics::after {
     display: none;
   }
-  .main-panel .content {
+  .main-panel .content, .main-login-panel .content {
     padding-left: 15px;
     padding-right: 15px;
   }
